welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:19: error: not found: value deposeBiscuit
  deposeBiscuit()
  ^